working on profile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Portfolio</title>
 
-        <!-- Bootstrap CSS, font-awesome and Animate -->
+        <!-- Bootstrap CSS, font awesome and Animate -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -26,7 +26,7 @@
     </head>
     <body ng-app="PortfolioApp">
         <!-- Navbar -->
-        <nav class="navbar navbar-default" role="navigation">
+        <nav style="background-color: #008681" class="navbar navbar-default" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -36,7 +36,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="https://github.com/scottheron">Scott Heron <i class="fa fa-github"></i></a>
+                    <a style="color: white" class="navbar-brand" href="/#/">Scott Heron <i class="fa fa-github"></i></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,8 +45,8 @@
                         
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/#/">Home</a></li>
-                        <li><a href="/#/resume">Resume</a></li>
+                        <li><a style="color: white" href="/#/">Home</a></li>
+                        <li><a style="color: white" href="/#/resume">Resume</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div>
