--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="/#/about">About<span class="sr-only">(current)</span></a></li>
+        <li><a href="/#/about">About<span class="sr-only">(current)</span></a></li>
         <li><a href="/#/albums">Albums</a></li>
       </ul>
     </div>
