--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/controllers.js"></script>
+  <script type="text/javascript" src="js/services.js"></script>
 </head>
 <body ng-app="MarylandBasketball">
-  <div ng-controller="TestCtrl">
-    <div id="nav">
-      <a href="/">Home</a>
-      <a href="/#/players">Players</a>
-      <a href="/#/players/:id"></a>
-    </div>
-    <h1>
-      2016 MARYLAND BASKETBALL
-    </h1>
-    <div ui-view></div>
+  <div id="nav">
+    <a href="/">Home</a>
+    <a href="/#/players">Players</a>
   </div>
+  <h1>
+    2016 MARYLAND BASKETBALL
+  </h1>
+  <div ui-view></div>
 </body>
 </html>
