--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-resource.js"></script>
+   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+   <script src="js/app.js"></script>
+   <script src="controllers/AboutCtrl.js"></script>
+   <script src="controllers/MainCtrl.js"></script>
+   <script src="controllers/ContactCtrl.js"></script>
+  </head>
+  <title>Star Wars and Such</title>
 </head>
-<body>
+<body ng-app="StarWarsApp" ng-controller="FilmsCtrl">
   <h1>Hello Front-End</h1>
+
+    <a href="/#/">Home Page</a>
+  <a href="/#/about">About Page</a>
+  <a href="/#/contact">Contact Page</a>
+
+    <div ui-view></div>
+
+    <div>
+        <input type="integer" ng-model="movieId">
+        <button ng-click="getMovie(movieId)">Get</button>
+        <button ng-click="getAll()">All</button>
+    </div>
+
+    <div ng-if="loading">
+          Loading...
+        </div>
+
+    <div ng-if="!loading" class="well" ng-repeat="film in films">
+        <h2>{{ film.title }}</h2>
+        <p>{{ film.opening_crawl }}</p>
+      </div>
 </body>
 </html>
