--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Front-End</title>
-</head>
-<body>
-  <h1>Hello Front-End</h1>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.5.2/restangular.js"></script>
+  <script src="js/angular-ui-router.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="controllers/MainCtrl.js"></script>
+  <script src="controllers/AboutCtrl.js"></script>
+  <script src="controllers/ContactCtrl.js"></script>
+  </head>
+<body ng-app="myApp" ng-controller="MainCtrl">
+  <h1>Hello Darkness my old friend</h1>
+  <h2>{{ 2 + 2 }}</h2>
+
+  <a href="/#/">Home Page</a>
+  <a href="/#/about">About Page</a>
+  <a href="/#/contact">Contact Page</a>
+  <div ui-view></div>
+
 </body>
 </html>
