--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-resource.js"></script>
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
@@ -12,31 +13,42 @@
    <script src="controllers/AboutCtrl.js"></script>
    <script src="controllers/MainCtrl.js"></script>
    <script src="controllers/ContactCtrl.js"></script>
+   <script src="controllers/FilmsCtrl.js"></script>
   </head>
   <title>Star Wars and Such</title>
 </head>
 <body ng-app="StarWarsApp" ng-controller="FilmsCtrl">
-  <h1>Hello Front-End</h1>
 
-    <a href="/#/">Home Page</a>
-  <a href="/#/about">About Page</a>
-  <a href="/#/contact">Contact Page</a>
-
-    <div ui-view></div>
-
-    <div>
-        <input type="integer" ng-model="movieId">
-        <button ng-click="getMovie(movieId)">Get</button>
-        <button ng-click="getAll()">All</button>
+  <nav class="navbar navbar-default text-center">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
 
-    <div ng-if="loading">
-          Loading...
-        </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/#/">Home</a></li>
+        <li class="active"><a href="/#/about">FAQ</a></li>
+        <li class="active"><a href="/#/contact">Contact</a></li>
+        <li class="active"><a href="/#/films">Film Search</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
-    <div ng-if="!loading" class="well" ng-repeat="film in films">
-        <h2>{{ film.title }}</h2>
-        <p>{{ film.opening_crawl }}</p>
-      </div>
+<h1 class="text-center">STAR WARS</h1>
+
+    <div class="container text-center" ui-view></div>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
