--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Front-End</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <!-- Angular -->
+   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
+  <script src="angular-ui-router.min.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="controllers/MainCtrl.js"></script>
+  <script type="text/javascript" src="controllers/Prj1Ctrl.js"></script>
+  <script type="text/javascript" src="controllers/Prj2Ctrl.js"></script>
+  <script type="text/javascript" src="controllers/Prj3Ctrl.js"></script>
+  <script type="text/javascript" src="controllers/AboutCtrl.js"></script>
 </head>
-<body>
-  <h1>Hello Front-End</h1>
+
+<body ng-app="App" class="container">
+  <div class="container">
+    <a href="/#/">Home</a>
+    <a href="/#/project1">Project 1</a>
+    <a href="/#/project2">Project 2</a>
+    <a href="/#/project3">Project 3</a>
+    <a href="/#/about">About</a>
+    <div ui-view></div>
+  </div>
+
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <!-- Bootstrap JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </body>
 </html>
