--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Welcome to the online portfolio of Ryan Rotz</title>
+
+  <!-- <script src="js/angular.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script>
+  <!-- <script src="js/angular-ui-router.min.js"></script> -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+  <script src='js/infinite-scroll.js'></script>
+  <script src="js/app.js"></script>
+  <script src="Controllers/MainCtrl.js"></script>
+  <script src="Controllers/AboutCtrl.js"></script>
+  <script src="Controllers/ContactCtrl.js"></script>
+  <script src="Controllers/SkillsCtrl.js"></script>
+  <script src="Controllers/PortfolioCtrl.js"></script>
+  <script src="Controllers/ResumeCtrl.js"></script>
+  <script src="Controllers/ExperienceCtrl.js"></script>
+
 </head>
-<body>
-  <h1>Hello Front-End</h1>
+<body ng-app="ryanSite">
+  <h1>Welcome to the online portfolio of Ryan Rotz</h1>
+  {{2+2}}
+
+  <!-- Add bootstrap or Materialize nav here -->
+  <a href="/#/">Home </a>
+  <a href="/#/about">About </a>
+  <a href="/#/skills">Skills </a>
+  <a href="/#/portfolio">Portfolio </a>
+  <a href="/#/experience">Experience </a>
+  <a href="/#/resume">Resume </a>
+  <a href="/#/contact">Contact </a>
+
+  <div infinite-scroll="scroll()" infinite-scroll-distance=".2">
+  <div ng-repeat="path in paths track by $index">{{path}}</div>
+    <div ui-view></div>
+  </div>
 </body>
 </html>
