--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Front-End</title>
+  <script src="js/angular.js"></script>
+  <script src="js/angular-ui-router.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/jquery-2.2.4.min.js"></script>
+  <script src="js/foundation.min.js"></script>
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400' rel='stylesheet' type='text/css'>
 </head>
-<body>
-  <h1>Hello Front-End</h1>
+<body ng-app="Portfolio">
+  <div class="header row">
+    <ul class="links text-center">
+      <li><a href="/#/">HOME</a></li>
+      <li><a href="/#/projects">PROJECTS</a></li>
+      <li><a href="/#/about">ABOUT</a></li>
+      <li><a href="/#/contact">CONTACT</a></li>
+    </ul>
+  </div>
+
+  <div ui-view></div>
 </body>
 </html>
