--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- Manual CSS Override -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <!-- Script Tags -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-resource.js"></script>
-   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
-   <script src="js/app.js"></script>
-   <script src="controllers/AboutCtrl.js"></script>
-   <script src="controllers/MainCtrl.js"></script>
-   <script src="controllers/ContactCtrl.js"></script>
-   <script src="controllers/FilmsCtrl.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-resource.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+    <script src="js/app.js"></script>
+    <script src="controllers/AboutCtrl.js"></script>
+    <script src="controllers/MainCtrl.js"></script>
+    <script src="controllers/ContactCtrl.js"></script>
+    <script src="controllers/FilmsCtrl.js"></script>
   </head>
   <title>Star Wars and Such</title>
 </head>
-<body ng-app="StarWarsApp" ng-controller="FilmsCtrl">
 
+<!-- Declare Angular App  -->
+<body ng-app="StarWarsApp">
+
+<!-- Navbar -->
   <nav class="navbar navbar-default text-center">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -42,10 +49,12 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<!-- end Navbar -->
 
 <h1 class="text-center">STAR WARS</h1>
 
-    <div class="container text-center" ui-view></div>
+  <!-- "ui-view" is what renders each page partial -->
+  <div class="container text-center" ui-view></div>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
