--- a/index.html
+++ b/index.html
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+<html lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Title Page</title>
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.5.2/restangular.js"></script>
+ <!--  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-animate.js"></script> -->
   <script src="js/angular-ui-router.min.js"></script>
   <script src="js/app.js"></script>
   <script src="controllers/MainCtrl.js"></script>
   <script src="controllers/AboutCtrl.js"></script>
   <script src="controllers/ContactCtrl.js"></script>
-  </head>
-<body ng-app="myApp" ng-controller="MainCtrl">
-  <h1>Hello Darkness my old friend</h1>
-  <h2>{{ 2 + 2 }}</h2>
+</head>
 
-  <a href="/#/">Home Page</a>
-  <a href="/#/about">About Page</a>
-  <a href="/#/contact">Contact Page</a>
+<body ng-app="myApp" ng-controller="MainCtrl">
+  <div class="jumbotron text-center">
+    <h1>Hello Darkness my old friend</h1>
+  </div>
+  <div class="container">
+    <!-- <div class="well text-center">
+      <a href="/#/">Home Page</a>
+      <a href="/#/about">About Page</a>
+      <a href="/#/contact">Contact Page</a>
+    </div> -->
+    <ul class="nav nav-pills text-center">
+      <li role="presentation" class="active"><a href="/#/">Home Page</a></li>
+      <li role="presentation"><a href="/#/about">About Page</a></li>
+      <li role="presentation"><a href="/#/contact">Projects</a></li>
+    </ul>
+
+  </div>
   <div ui-view></div>
 
 </body>
 </html>
+
+<!-- photo-1417577097439-425fb7dec05e?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=6e4e558996753c5f3caf26069c6b0aba -->
