--- a/index.html
+++ b/index.html
@@ -1,11 +1,124 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
-</head>
-<body>
-  <h1>Hello Front-End</h1>
-</body>
+<!DOCTYPE HTML>
+<!--
+  Hyperspace by HTML5 UP
+  html5up.net | @ajlkn
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  <head>
+    <title>Cmadison.io</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
+    <script src="assets/js/angular-ui-router.min.js"></script>
+    <script src="assets/js/app.js"></script>
+    <script src="controllers/MainCtrl.js"></script>
+    <script src="controllers/WhatCtrl.js"></script>
+    <script src="controllers/WorkCtrl.js"></script>
+    <script src="controllers/StoryCtrl.js"></script>
+
+  </head>
+  <body ng-app="Portfolio">
+
+    <!-- Sidebar -->
+      <section id="sidebar">
+        <div class="inner">
+          <nav>
+            <ul>
+              <li><a href="#intro">Welcome</a></li>
+              <li><a href="/#/who">Who I am</a></li>
+              <li><a href="/#/work">My Work</a></li>
+              <li><a href="/#/what">What I do</a></li>
+              <li><a href="#three">Get in touch</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+
+    <!-- Wrapper -->
+      <div id="wrapper">
+        <div ui-view></div> <!-- Take this out after the assignment has been graded. -->
+
+        <!-- Contact Me -->
+          <section id="three" class="wrapper style1 fade-up">
+            <div class="inner">
+              <h2>Get in touch</h2>
+              <p>If you're a spam bot or a guy in India trying to sell me something, go kill yourself...in a slow painful way.</p>
+              <div class="split style1">
+                <section>
+                  <form method="post" action="#">
+                    <div class="field half first">
+                      <label for="name">Name</label>
+                      <input type="text" name="name" id="name" />
+                    </div>
+                    <div class="field half">
+                      <label for="email">Email</label>
+                      <input type="text" name="email" id="email" />
+                    </div>
+                    <div class="field">
+                      <label for="message">Message</label>
+                      <textarea name="message" id="message" rows="5"></textarea>
+                    </div>
+                    <ul class="actions">
+                      <li><a href="" class="button submit">Send Message</a></li>
+                    </ul>
+                  </form>
+                </section>
+                <section>
+                  <ul class="contact">
+                    <li>
+                      <h3>Address</h3>
+                      <span>12345 Somewhere Road #654<br />
+                      Nashville, TN 00000-0000<br />
+                      USA</span>
+                    </li>
+                    <li>
+                      <h3>Email</h3>
+                      <a href="#">ckmadison4@gmail.com</a>
+                    </li>
+                    <li>
+                      <h3>Phone</h3>
+                      <span>(702) 606-5967</span>
+                    </li>
+                    <li>
+                      <h3>Social</h3>
+                      <ul class="icons">
+                        <li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
+                        <li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
+                        <li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+          </section>
+
+      </div>
+
+    <!-- Footer -->
+      <footer id="footer" class="wrapper style1-alt">
+        <div class="inner">
+          <ul class="menu">
+            <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          </ul>
+        </div>
+      </footer>
+
+    <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.scrollex.min.js"></script>
+      <script src="assets/js/jquery.scrolly.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+      <script src="assets/js/main.js"></script>
+
+  </body>
 </html>
