--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 <body ng-app="Portfolio">
-  <div class="header row">
+  <div class="header">
     <ul class="links text-center">
       <li><a href="/#/">HOME</a></li>
       <li><a href="/#/projects">PROJECTS</a></li>
       <li><a href="/#/about">ABOUT</a></li>
-      <li><a href="/#/contact">CONTACT</a></li>
+      <li><a href="/#/contact"><i class="fa fa-envelope-o" aria-hidden="true"></i> CONTACT</a></li>
     </ul>
   </div>
 
