--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="js/foundation.min.js"></script>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/cardflip.css">
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
