--- a/index.html
+++ b/index.html
@@ -14,17 +14,31 @@
   <link rel="stylesheet" href="css/cardflip.css">
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body ng-app="Portfolio">
-  <div class="header">
+
+  <!-- <div class="header">
     <ul class="links text-center">
       <li><a href="/#/">HOME</a></li>
       <li><a href="/#/projects">PROJECTS</a></li>
       <li><a href="/#/about">ABOUT</a></li>
       <li><a href="/#/contact"><i class="fa fa-envelope-o" aria-hidden="true"></i> CONTACT</a></li>
     </ul>
-  </div>
+  </div> -->
 
   <div ui-view></div>
+  <div ng-include="'views/projectlist.html'" ng-controller="MainCtrl"></div>
+
+
+  <!-- <div class="footer">
+    <ul class="links text-center">
+      <li><a href="/#/">HOME</a></li>
+      <li><a href="/#/about">ABOUT</a></li>
+      <li><a href="/#/about">RESUME</a></li>
+      <li><a href="/#/contact">CONTACT</a></li>
+    </ul>
+  </div> -->
+
 </body>
 </html>
