Added 4 projects plus almost all MVP. About to drastically change site

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </head>
 <body ng-app="Portfolio">
 
+  <div class="header">
+    <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+  </div>
+
   <!-- <div class="header">
     <ul class="links text-center">
       <li><a href="/#/">HOME</a></li>
