--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="RoutingApp">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+ 	<meta charset="UTF-8">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1">
+ 	<title>Routing App</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+
+	<script src="js/app.js"></script>
+	<script src="js/controllers.js"></script>
 </head>
-<body>
-  <h1>Hello Front-End</h1>
+<body class="text-center">
+ 	<h1 class="testing-style">Fake Site w/ Silly Animals</h1>
+
+ 	<ul id="nav-menu">
+ 		<li><a href="/#/capybaras">Capybaras</a></li>
+ 		<li><a href="/#/goats">Goats</a></li>
+ 		<li><a href="/#/anteaters">Anteaters</a></li>
+ 		<li><a href="/#/raccoons">Raccoons</a></li>
+ 	</ul>
+
+
+ 	<div ui-view></div>
+
+
 </body>
 </html>
