--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -20,6 +19,6 @@
 		<div ui-view></div>
 	  
 	</div>
-	<div>Info provided by <a href="https://en.wikipedia.org/wiki/Hippopotamus">Wikipedia</a></div>
+	<div class="footer">Info provided by <a href="https://en.wikipedia.org/wiki/Hippopotamus">Wikipedia</a></div>
 </body>
 </html>
