--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" ng-app="GuyRitchieApp">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Guy Ritchie</title>
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Latest compiled and minified CSS & JS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <script src="js/controllers.js"></script>
+  <script src="js/app.js"></script>
+
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Guy Ritchie</a>
+    </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/#/about">About</a></li>
+        <li><a href="/#/movies">Movies</a></li>
+        <li><a href="/#/awards">Awards</a></li>
+      </ul>
+    </div>
+    </div>
+</nav>
+
+  <div ui-view></div>
+
 </body>
 </html>
+
