--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Groove Merchant Records</title>
+   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+   <script src="app/app.js"></script>
+   <script src="app/controllers.js"></script>
+   <script src="https://use.typekit.net/vdi7rny.js"></script>
+   <script>try{Typekit.load({ async: true });}catch(e){}</script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </head>
-<body>
-  <h1>Hello Front-End</h1>
-</body>
-</html>
+ <body ng-app="GrooveApp">
+ <a class="logo" href="#"><img src="img/logo.png"></a>
+ <nav class="navbar">
+  <div class="container-fluid">
+    <ul class="nav-justified navbar nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#/about">About Us</a></li> 
+      <li><a href="#/contact">Buy Sell Trade</a></li>
+    </ul>
+  </div>
+</nav>
+
+   <div ui-view></div>
+ 
+
+  <div id="footer">
+      <div class="container">
+        <h3 class="footer-block">687 Haight St, San Francisco, CA 94117, United States</h3>	
+     	</div>
+    </div>
+  </body>
+  </html>
