--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="BreakingApp">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Breaking Bad Characters</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1><a href="/#/">Breaking Bad</a></h1>
+
+ <p>Type in the name of any character... as long as it's Walter, Jesse, or Gustavo.</p>
+
+ <input type="text" ng-model="character">
+
+ <p>{{character}}</p>
+
+<ul>
+	<li ng-if="character == 'Walter'"><a href="/#/walter">Walter</a></li>
+	<li ng-if="character == 'Jesse'"><a href="/#/jesse">Jesse</a></li>
+	<li ng-if="character == 'Gustavo'"><a href="/#/gustavo">Gustavo</a></li>
+</ul>
+  
+  <div ui-view></div>
+
+
 </body>
 </html>
