--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="MyGifApp" lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Jacob's Site</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+   <script src="js/app.js"></script>
+   <script src="js/controllers.js"></script>
+   <script src="js/services.js"></script>
+
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+
+<div class="conatainer">
+
+	<nav class="navbar navbar-light bg-faded">
+		<h1 class="navbar-brand">Super Awesome Website</h1>
+		<ul class="nav navbar-nav">
+			<li class="nav-item"><a class="nav-link" href="/">Gif Search</a></li>
+			<li class="nav-item"><a class="nav-link" href="/#/vod">Video of the Day</a></li>
+			<li class="nav-item"><a class="nav-link" href="http://www.theuselessweb.com/">Random</a></li>
+		</ul>
+	</nav>
+
+	<div ui-view></div>
+
+</div>
+
 </body>
 </html>
