--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
-</head>
-<body>
-  <h1>Hello Front-End</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Angular Routing Practice</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- Angular -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
+    <script src="../js/app.js"></script>
+    <script src="../js/controllers.js"></script>
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
+  <body ng-app="App">
+    <div class="nav">
+      <nav>
+        <ul class="nav nav-tabs" role="tablist">
+          <li role="presentation" ui-sref-active="active"><a ui-sref="home">Home</a></li>
+          <li role="presentation" ui-sref-active="active"><a ui-sref="about">About</a></li>
+          <li role="presentation" ui-sref-active="active"><a ui-sref="sponsors({id: ''})">Sponsors</a></li>
+        </ul>
+      </nav>
+    <div>
+
+    </div>
+    <div class="container">
+      <div ui-view>
+
+      </div>
+    </div>
+
+    <div class="footer">
+      Footer
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="../js/main.js"></script>
+
+  </body>
 </html>
