--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/controllers.js"></script>
+  <title>Game of Thrones</title>
 </head>
-<body>
-  <h1>Hello Front-End</h1>
+<body ng-app='App'>
+
+	<nav class="navbar navbar-inverse navbar-static-top" style="margin-bottom: 0;">
+	  <ul class="nav navbar-nav">
+	    <li><a href="/#/">HOME</a></li>
+	    <li><a href="/#/cast">CAST</a></li>  
+	    <li><a href="/#/trailer">TRAILER</a></li>
+	  </ul>
+	</nav>
+
+  <div ui-view></div>
 </body>
 </html>
