--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- Angular -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
-    <script src="../js/app.js"></script>
-    <script src="../js/controllers.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body ng-app="App">
@@ -59,7 +59,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
 
   </body>
 </html>
