--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav">
             <li ui-sref-active="active"><a ui-sref="about">About</a></li>
             <li ui-sref-active="active"><a ui-sref="sponsors({id: ''})">Sponsors</a></li>
-            <li ui-sref-active="active"><a ui-sref="jobs">Jobs</a></li>
+            <li ui-sref-active="active"><a ui-sref="news">News</a></li>
           </ul>
         </div>
 
