--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title Page</title>
+    <title>DedElectric</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -21,18 +21,19 @@
 </head>
 
 <body ng-app="myApp" ng-controller="MainCtrl">
+
   <div class="jumbotron text-center">
     <img src="img/dedlogo.jpg">
   </div>
+
   <div class="container">
-
     <ul class="nav nav-pills text-center">
-      <li role="presentation" class="active"><a href="/#/">Home Page</a></li>
-      <li role="presentation"><a href="/#/about">About Page</a></li>
-      <li role="presentation"><a href="/#/contact">Projects</a></li>
+      <li role="presentation"><a href="/#/">Home Page</a></li>
+      <li role="presentation"><a href="/#/about">When and Where</a></li>
+      <li role="presentation"><a href="/#/contact">Contact Us</a></li>
     </ul>
-
   </div>
+
   <div ui-view></div>
 
 </body>
