--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app='FilmApp'>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Film Search</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-resource.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="js/factory.js"></script>
+  <script src="js/controller.js"></script>
+  <script src="js/app.js"></script>
 </head>
-<body>
-  <h1>Hello Front-End</h1>
+<body ng-controller='FilmCtrl' class="text-center">
+	<div class="container">	
+	<nav class="navbar navbar-inverse navbar-fixed-top navbar-">
+		<div class="navbar-header">
+	      <a class="navbar-brand" href="/"><strong>Film Search</strong></a>
+	    </div>
+			<ul class="nav navbar-nav text-center">
+				<li><a href="/">Home</a></li>
+				<li><a href="/#/about">About</a></li>
+				<li><a href="/#/film">Search Results</a></li>
+				<li><a href="#"></a></li>
+				<li><a href="#"></a></li>
+			</ul>
+			<form class="navbar-form navbar-left" ng-submit='search()'>
+			  <div class="input-group">
+			    <input type="text" class="form-control input-text" ng-model='searchTerm' ng-submit='search()' placeholder="Search Film">
+			    <div class="input-group-btn">
+			      <button class="btn btn-default" type="submit" type="submit">
+			        <i class="glyphicon glyphicon-search" type="submit"></i>
+			      </button>
+			    </div>
+			  </div>
+			</form>
+	</nav>
+	</div>
+
+	<div class="'container">
+    	<div ui-view></div>
+  	</div>
+
+	<div class="container">
+
+	</div>
 </body>
 </html>
